fix alignment

--- a/my-app/src/App.css
+++ b/my-app/src/App.css
@@ -47,3 +47,7 @@
 .header-body {
   color: white;
 }
+
+.card {
+  height: 100%;
+}
